tests/errors/test_error_no_closing_bracker.f90
PROGRAM test
  a = (b + 5
END PROGRAM test